--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">EXOMIND</string>
-    <string name="user_error_retrieve">EXOMIND</string>
+    <string name="user_error_retrieve">Erreur chargement des donneés  </string>
+    <!-- TODO: Remove or change this placeholder text -->
 
 </resources>
